--- a/about me.html
+++ b/about me.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-  
+
     <header>
       <h1>Hey! My name is Alex. </h1>
       <div><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
 
       <nav>
        <ol>
-			<li><a href="">home</a></li>
+			<li><a href="">home home</a></li>
         <li><a href="">About me</a></li>
         <li><a href="">Commission</a></li>
         <li><a href="">My Artwork</a></li>
@@ -26,7 +26,7 @@
     <div>
       <!-- image slide 2/3 images rotating -->
       <div>
-        <h2>My name is Alex Hernandez. I am an aspiring digital artist striving to make a mark with my passion for art. My mediums are digital art on Procreate and Clipnote Studio. I am a twenty-two-year-old college student eager to share my art. I started drawing when I was nine years old, being inspired by video games and anime is where the love to create came from. Games like Pokemon, Kingdom Hearts, and Fire Emblem made me imagine my vision of character creation. I started making my characters, small comics that were heavily inspired by these games and animes I loved. My work is still influenced by these things in the style I have developed over the years. I hope to grow as an artist and continue to develop my style so people will recognize my name and work. I want to inspire young people to use art as a positive outlet to create and feed their imagination.  
+        <h2>My name is Alex Hernandez. I am an aspiring digital artist striving to make a mark with my passion for art. My mediums are digital art on Procreate and Clipnote Studio. I am a twenty-two-year-old college student eager to share my art. I started drawing when I was nine years old, being inspired by video games and anime is where the love to create came from. Games like Pokemon, Kingdom Hearts, and Fire Emblem made me imagine my vision of character creation. I started making my characters, small comics that were heavily inspired by these games and animes I loved. My work is still influenced by these things in the style I have developed over the years. I hope to grow as an artist and continue to develop my style so people will recognize my name and work. I want to inspire young people to use art as a positive outlet to create and feed their imagination.
 </h2>
         <h2>My artwork</h2>
         <div>
@@ -69,7 +69,7 @@
             <path class="cls-1" d="M27.75,0H95.13a27.83,27.83,0,0,1,27.75,27.75V94.57a27.83,27.83,0,0,1-27.75,27.74H27.75A27.83,27.83,0,0,1,0,94.57V27.75A27.83,27.83,0,0,1,27.75,0Z"/>
         </g>
 				<g><path class="cls-2" d="M102.55,35.66a33.3,33.3,0,0,1-9.68,2.65A17,17,0,0,0,100.29,29a34.05,34.05,0,0,1-10.71,4.1A16.87,16.87,0,0,0,60.41,44.62a17.45,17.45,0,0,0,.43,3.84A47.86,47.86,0,0,1,26.09,30.83a16.83,16.83,0,0,0-2.29,8.48h0a16.84,16.84,0,0,0,7.5,14,17,17,0,0,1-7.64-2.11v.22A16.86,16.86,0,0,0,37.19,68a17.19,17.19,0,0,1-4.45.6,17.58,17.58,0,0,1-3.18-.31A16.9,16.9,0,0,0,45.31,80a34,34,0,0,1-25,7,47.69,47.69,0,0,0,25.86,7.58c31,0,48-25.7,48-48,0-.74,0-1.46-.05-2.19a33.82,33.82,0,0,0,8.41-8.71Z"/></g>
-				
+
 					</svg>
           </a>
           <a href="TikTok-LINK">
