--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+
   <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alex Hernandez Portfolio lol</title>
 	<link href="/images/logos and icons/favicon.png" rel="shortcut icon">
 </head>
@@ -11,7 +16,7 @@
 
     <header>
       <h1>Hey! My name is Alex. </h1>
-      <div><img src="images/logos and icons/Alex_logo.png" alt=""></div>
+      <div><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
 
       <nav>
         <ol>
@@ -51,7 +56,7 @@
         <h2>Commission work</h2>
         <a href="commission.html"><picture>
           <source srcset="images/mobile/Artwork_2_mobile.jpg" media="(max-width:767px)">
-          <img src="images/desktop/Artwork 2 desktop.jpg" alt="My Image">
+          <img src="images/desktop/Artwork_2_desktop.jpg" alt="My Image">
         </picture></a>
         <a href="commission.html"><picture>
           <source srcset="images/mobile/Artwork_1_mobile.jpg" media="(max-width:767px)">
