--- a/about.html
+++ b/about.html
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+
   <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alex Hernandez Portfolio</title>
 	<link href="/images/logos_and_icons/favicon.png" rel="shortcut icon">
 </head>
