--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 	</main>
        <footer>
       <div>
-        <div>
-          <h2>Get in Touch</h2>
+        <div class="contact">
+          <h2 class="button">Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 
         </div>
