--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Alex Hernandez Portfolio lol</title>
+  <title>Alex Hernandez Portfolio</title>
 	<link href="/images/logos and icons/favicon.png" rel="shortcut icon">
 </head>
 
@@ -30,7 +30,7 @@
 	<main>
     <div>
       <!-- image slide 2/3 images rotating -->
-      <div>
+      <div class="slider">
         <h2>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h2>
         <h2>My artwork</h2>
         <div>
@@ -51,7 +51,7 @@
       </div>
     </div><!-- end of slider -->
     <div>
-      <div>
+      <div class ="commission">
         <h2>Here are some commission artworks I’ve done from my Instagram and Twitter community.</h2>
         <h2>Commission work</h2>
         <a href="commission.html"><picture>
@@ -67,8 +67,8 @@
 	</main>
     <footer>
       <div>
-        <div>
-          <h2>Get in Touch</h2>
+        <div class="contact">
+          <h2 class="button">Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 
         </div>
@@ -76,7 +76,7 @@
           <a href="#">Email me</a>
         </div>
 
-        <div>
+        <div class ="social">
           <p>I am active on social media and I post and share art that inspire me.</p>
           <!--Social Media Layout and Placeholders-->
           <a href="https://www.instagram.com/pupmuii/" target="_blank">
