--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 	<main>
     <div>
       <!-- image slide 2/3 images rotating -->
-      <div>
+      <div class="grid">
         <h2>My artwork</h2>
         <div>
           <a href="artwork.html"><picture>
@@ -63,8 +63,8 @@
 	</main>
        <footer>
       <div>
-        <div>
-          <h2>Get in Touch</h2>
+        <div class="contact">
+          <h2 class="button">Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 <button type="button" onclick="alert('email')">Contact me</button>
         </div>
