--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>
+<head id="top">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header>
+    <header id="nav">
       <h1>Hey! My name is Alex. </h1>
       <div><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
 
@@ -28,7 +28,7 @@
       </nav>
     </header>
 	<main>
-    <div>
+    <div id="intro">
       <!-- image slide 2/3 images rotating -->
       <div class="slider">
         <h2>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h2>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div><!-- end of slider -->
-    <div>
+    <div id="commission">
       <div class ="commission">
         <h2>Here are some commission artworks I’ve done from my Instagram and Twitter community.</h2>
         <h2>Commission work</h2>
@@ -65,7 +65,7 @@
       </div>
     </div><!-- end of commission -->
 	</main>
-    <footer>
+    <footer id="footer">
       <div>
         <div class="contact">
           <h2 class="button">Get in Touch</h2>
