--- a/projects.html
+++ b/projects.html
@@ -15,17 +15,19 @@
 <body>
 
     <header>
+      <div class="container">
       <h1>Hey! My name is Alex. </h1>
-      <div><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
+      <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
 
       <nav>
-       <ol>
+        <ol>
 			<li><a href="">home</a></li>
         <li><a href="">About me</a></li>
         <li><a href="">Commission</a></li>
         <li><a href="">My Artwork</a></li>
 		  </ol>
       </nav>
+		</div>
     </header>
 	<main>
     <div>
@@ -68,7 +70,7 @@
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 <button type="button" onclick="alert('email')">Contact me</button>
         </div>
-        <div>
+        <div class ="social">
           <p>I am active on social media and I post and share art that inspire me.</p>
           <!--Social Media Layout and Placeholders-->
           <a href="https://www.instagram.com/pupmuii/" target="_blank">
@@ -105,7 +107,7 @@
 </svg>
           </a>
         </div>
-        <div>
+        <div class="copyright">
           <p>Copyright Alex Portfolio 2021</p>
         </div>
       </div>
