--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
 
     <header id="nav">
+		<div class="container">
       <h1>Hey! My name is Alex. </h1>
-      <div><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
+      <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
 
       <nav>
         <ol>
@@ -26,12 +27,16 @@
         <li><a href="">My Artwork</a></li>
 		  </ol>
       </nav>
+		</div>
     </header>
 	<main>
     <div id="intro">
       <!-- image slide 2/3 images rotating -->
       <div class="slider">
-        <h2>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h2>
+		  <hero>
+		  <h2>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h2>
+		  </hero>
+        
         <h2>My artwork</h2>
         <div>
           <a href="artwork.html"><picture>
@@ -72,7 +77,7 @@
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 
         </div>
-        <div>
+        <div class="email">
           <a href="#">Email me</a>
         </div>
 
@@ -113,7 +118,7 @@
 </svg>
           </a>
         </div>
-        <div>
+        <div class="copyright">
           <p>Copyright Alex Portfolio 2021</p>
         </div>
       </div>
