--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		  </hero>
         
         <h2>My artwork</h2>
+		  <div class="row">
         <div>
           <a href="artwork.html"><picture>
             <source srcset="images/mobile/Artwork_3_mobile.jpg" media="(max-width:767px)">
@@ -52,6 +53,7 @@
             <img src="images/desktop/Artwork_4_desktop.jpg" alt="My Image">
           </picture></a>
           <p>This piece was inspired by artist Lil Nas X and his song Monstro.</p>
+			  </div>
         </div>
       </div>
     </div><!-- end of slider -->
