--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,10 @@
 
       <nav>
         <ol>
-			<li><a href="">home</a></li>
-        <li><a href="">About me</a></li>
+			<li><a href="index.html">home</a></li>
+        <li><a href="about.html">About me</a></li>
         <li><a href="">Commission</a></li>
-        <li><a href="">My Artwork</a></li>
+        <li><a href="projects.html">My Artwork</a></li>
 		  </ol>
       </nav>
 		</div>
@@ -66,9 +66,11 @@
        <footer>
       <div>
         <div class="contact">
-          <h2 class="button">Get in Touch</h2>
+          <h2>Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
-<button type="button" onclick="alert('email')">Contact me</button>
+		<div class="email">
+          <a href="#" class="button">Email me</a>
+        </div>
         </div>
         <div class ="social">
           <p>I am active on social media and I post and share art that inspire me.</p>
