--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
       <nav>
         <ol>
-			<li><a href="">home</a></li>
-        <li><a href="">About me</a></li>
+			<li><a href="index.html">home</a></li>
+        <li><a href="about.html">About me</a></li>
         <li><a href="">Commission</a></li>
-        <li><a href="">My Artwork</a></li>
+        <li><a href="projects.html">My Artwork</a></li>
 		  </ol>
       </nav>
 		</div>
@@ -34,7 +34,7 @@
       <!-- image slide 2/3 images rotating -->
       <div class="slider">
 		  <hero>
-		  <h2>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h2>
+		  <h4>Nice to meet you. I am an aspiring digital artist who loves to show my art to the world. On top of creating art for fun, I also do commission work if you enjoy my style!</h4>
 		  </hero>
         
         <h2>My artwork</h2>
@@ -75,12 +75,12 @@
     <footer id="footer">
       <div>
         <div class="contact">
-          <h2 class="button">Get in Touch</h2>
+          <h2>Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 
         </div>
         <div class="email">
-          <a href="#">Email me</a>
+          <a href="#" class="button">Email me</a>
         </div>
 
         <div class ="social">
