--- a/about.html
+++ b/about.html
@@ -35,25 +35,27 @@
 		  <h4>My name is Alex Hernandez. I am an aspiring digital artist striving to make a mark with my passion for art. My mediums are digital art on Procreate and Clipnote Studio. I am a twenty-two-year-old college student eager to share my art. I started drawing when I was nine years old, being inspired by video games and anime is where the love to create came from. Games like Pokemon, Kingdom Hearts, and Fire Emblem made me imagine my vision of character creation. I started making my characters, small comics that were heavily inspired by these games and animes I loved. My work is still influenced by these things in the style I have developed over the years. I hope to grow as an artist and continue to develop my style so people will recognize my name and work. I want to inspire young people to use art as a positive outlet to create and feed their imagination.</h4>
 		  </hero>
         <h2>My artwork</h2>
-        <div>
+        <div class="row">
+        <div class="col-md-6 col-lg-7">
           <a href="artwork.html"><picture>
             <source srcset="images/logos_and_icons/alex_blue.png" media="(max-width:767px)">
             <img src="images/logos_and_icons/alex_blue.png" alt="My Image">
           </picture></a>
+			</div>
+			
                 </div> 
     </div>
 	</main>
        <footer>
       <div>
         <div class="contact">
-          <h2 class="button">Get in Touch</h2>
+          <h2>Get in Touch</h2>
           <p>Interested in my art style or thinking about owning one of my masterpiece? Email me or follow me on my social media platforms.</p>
 
         </div>
         <div class="email">
-          <a href="#">Email me</a>
+          <a href="#" class="button">Email me</a>
         </div>
-
         <div class ="social">
           <p>I am active on social media and I post and share art that inspire me.</p>
           <!--Social Media Layout and Placeholders-->
