--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/fe53348822.js" crossorigin="anonymous"></script>
+	<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alex Hernandez Portfolio</title>
@@ -17,7 +18,9 @@
   <header id="nav">
     <div class="container">
       <h1>Hey! My name is Alex. </h1>
+		<div class="navtoggle" id="myNavtoggle">
       <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
+		</div>
       <nav>
         <ol>
           <li><a href="index.html">home</a></li>
@@ -278,6 +281,7 @@
     </div>
 	  </div>
   </footer>
+	<script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 
