--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ol>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">About me</a></li>
-          <li><a href="">Commission</a></li>
+      	 <li><a href="commission.html">Commission</a></li>
           <li><a href="projects.html">My Artwork</a></li>
 			<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ol>
