--- a/commission.html
+++ b/commission.html
@@ -4,7 +4,7 @@
 <head id="top">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href="/images/logos and icons/favicon.png" rel="shortcut icon">
+	<link href="/images/logos_and_icons/favicon.png" rel="shortcut icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fe53348822.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
 <meta property="og:url" content="https://form.jotform.com/212825632741151" >
 <meta property="og:description" content="Please click the link to complete this form." >
 <meta name="slack-app-id" content="AHNMASS8M">
-<link rel="shortcut icon" href="https://cdn.jotfor.ms/assets/img/favicons/favicon-2021-light.png">
+<link rel="shortcut icon" href="/images/logos_and_icons/favicon.png" rel="shortcut icon">
 <link rel="canonical" href="https://form.jotform.com/212825632741151" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
 <meta name="HandheldFriendly" content="true" />
