--- a/about.html
+++ b/about.html
@@ -58,9 +58,8 @@
 
       </div>
       <div class="email">
-        <a href="#" class="button">Email me</a>
+        <a href="mailto:alex.meow925@gmail.com" class="button">Email me</a>
       </div>
-
       <div class="social">
         <p>I am active on social media and I post and share art that inspire me.</p>
         <!--Social Media Layout and Placeholders-->
@@ -97,7 +96,7 @@
             </g>
           </svg>
         </a>
-        <a href="Twitter-URL" target="_blank">
+        <a href="https://twitter.com/pupmuii" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
@@ -126,7 +125,7 @@
 
           </svg>
         </a>
-        <a href="TikTok-LINK">
+        <a href="https://www.tiktok.com/@pupmuii?" target="_blank">
           <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
