--- a/commission.html
+++ b/commission.html
@@ -1412,7 +1412,7 @@ for (var i = 0; i < all_spc.length; i++)
 
       </div>
       <div class="email">
-        <a href="#" class="button">Email me</a>
+        <a href="mailto:alex.meow925@gmail.com" class="button">Email me</a>
       </div>
 
       <div class="social">
@@ -1451,7 +1451,7 @@ for (var i = 0; i < all_spc.length; i++)
             </g>
           </svg>
         </a>
-        <a href="Twitter-URL" target="_blank">
+        <a href="https://twitter.com/pupmuii" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
@@ -1480,7 +1480,7 @@ for (var i = 0; i < all_spc.length; i++)
 
           </svg>
         </a>
-        <a href="TikTok-LINK">
+        <a href="https://www.tiktok.com/@pupmuii?" target="_blank">
           <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
