--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       </div>
       <div class="email">
-        <a href="#" class="button">Email me</a>
+        <a href="mailto:alex.meow925@gmail.com" class="button">Email me</a>
       </div>
 
       <div class="social">
@@ -161,7 +161,7 @@
             </g>
           </svg>
         </a>
-        <a href="Twitter-URL" target="_blank">
+        <a href="https://twitter.com/pupmuii" target="_blank">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
@@ -190,7 +190,7 @@
 
           </svg>
         </a>
-        <a href="TikTok-LINK">
+        <a href="https://www.tiktok.com/@pupmuii?" target="_blank">
           <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 122.31">
             <defs>
               <style>
