--- a/commission.html
+++ b/commission.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/fe53348822.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="Content-Type" content="text/html; charset=utf-8" />
 <link rel="alternate" type="application/json+oembed" href="https://www.jotform.com/oembed/?format=json&amp;url=https%3A%2F%2Fform.jotform.com%2F212825632741151" title="oEmbed Form">
 <link rel="alternate" type="text/xml+oembed" href="https://www.jotform.com/oembed/?format=xml&amp;url=https%3A%2F%2Fform.jotform.com%2F212825632741151" title="oEmbed Form">
 <meta property="og:title" content="Contact Form With Vanilla Theme" >
@@ -20,7 +20,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
 <meta name="HandheldFriendly" content="true" />
   <title>Alex Hernandez Portfolio</title>
-  
+
 	<link href="https://cdn01.jotfor.ms/static/formCss.css?3.3.28339" rel="stylesheet" type="text/css" />
 <style type="text/css">@media print{.form-section{display:inline!important}.form-pagebreak{display:none!important}.form-section-closed{height:auto!important}.page-section{position:initial!important}}</style>
 <link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/nova.css?3.3.28339" />
@@ -40,7 +40,7 @@
     body, html{
         margin:0;
         padding:0;
-        
+
     }
 
     .form-all{
@@ -54,9 +54,7 @@
     .form-radio-item label, .form-checkbox-item label, .form-grading-label, .form-header{
         color: #555;
     }
-
 </style>
-
 <style type="text/css" id="form-designer-style">
     /* Injected CSS Code */
 @import "https://fonts.googleapis.com/css?family=Ubuntu:light,lightitalic,normal,italic,bold,bolditalic";
@@ -212,7 +210,7 @@
   -ms-transition-timing-function: ease;
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
- 
+
 }
 /* omer */
 .form-radio-item,
@@ -387,13 +385,12 @@ li[data-type="control_image"] img {
   border: none;
   border-width: 0px !important;
   border-style: solid !important;
-  border-color: false !important;
 }
 .form-line-column {
   width: auto;
 }
 .form-line-error {
- 
+
   -webkit-box-shadow: inset 0px 3px 11px -7px #ff3200;
   -moz-box-shadow: inset 0px 3px 11px -7px #ff3200;
   box-shadow: inset 0px 3px 11px -7px #ff3200;
@@ -453,7 +450,7 @@ li[data-type="control_image"] img {
   display: none;
 }
 /* | */
-@media screen and (max-width: 480px), screen and (max-device-width: 768px) and (orientation: portrait), screen and (max-device-width: 415px) and (orientation: landscape) {
+@media screen and (max-width: 480px), screen and (max-width: 768px) and (orientation: portrait), screen and (max-width: 415px) and (orientation: landscape) {
   .testOne {
     letter-spacing: 0;
   }
@@ -723,10 +720,10 @@ www.jotform.com
 }
 
 /*responsive fields*/
-[data-type="control_textbox"] .form-textbox, 
+[data-type="control_textbox"] .form-textbox,
 [data-type="control_fullname"] .form-textbox,
 [data-type="control_email"] .form-textbox,
-[data-type="control_textarea"] .form-textarea, 
+[data-type="control_textarea"] .form-textarea,
 [data-type="control_dropdown"] .form-dropdown {
     width : 100% !important;
     max-width : none !important;
@@ -749,7 +746,7 @@ www.jotform.com
     display : block;
 }
 
-[data-type="control_dropdown"] .form-input, 
+[data-type="control_dropdown"] .form-input,
 [data-type="control_dropdown"] .form-input-wide {
     width : 100%;
 }
@@ -809,15 +806,15 @@ www.jotform.com
 }
 
 /*single fields with sublabels*/
-[data-type="control_textbox"] .form-input-wide .form-sub-label-container, 
+[data-type="control_textbox"] .form-input-wide .form-sub-label-container,
 [data-type="control_fullname"] .form-input-wide .form-sub-label-container,
 [data-type="control_email"] .form-input-wide .form-sub-label-container,
-[data-type="control_textarea"] .form-input-wide .form-sub-label-container, 
+[data-type="control_textarea"] .form-input-wide .form-sub-label-container,
 [data-type="control_dropdown"] .form-input-wide .form-sub-label-container,
-[data-type="control_textbox"] .form-input .form-sub-label-container, 
+[data-type="control_textbox"] .form-input .form-sub-label-container,
 [data-type="control_fullname"] .form-input .form-sub-label-container,
 [data-type="control_email"] .form-input .form-sub-label-container,
-[data-type="control_textarea"] .form-input .form-sub-label-container, 
+[data-type="control_textarea"] .form-input .form-sub-label-container,
 [data-type="control_dropdown"] .form-input .form-sub-label-container {
     width : 100%;
     max-width : none !important;
@@ -971,8 +968,8 @@ span.allowTime-container + span {
 }
 
 /*responsive full address fields*/
-.form-address-city, .form-address-line, .form-address-postal, 
-.form-address-state, .form-address-table, 
+.form-address-city, .form-address-line, .form-address-postal,
+.form-address-state, .form-address-table,
 .form-address-table .form-sub-label-container, .form-address-table select {
     width : 100%;
     max-width : 100%;
@@ -999,7 +996,7 @@ span.allowTime-container + span {
 }
 
 /*remove other checkbox*/
-.form-checkbox-other, 
+.form-checkbox-other,
 .form-radio-other {
     visibility : hidden !important;
 }
@@ -1210,7 +1207,7 @@ table td + td {
     padding-bottom : 0;
 }
 
-@media screen and (max-device-width:768px){
+@media screen and (max-width:768px){
     .form-all {
         margin : 0 auto !important;
         width : 100% !important;
@@ -1278,7 +1275,7 @@ if (window.JotForm && JotForm.accessible) $('input_7').setAttribute('tabindex',0
 
    JotForm.prepareCalculationsOnTheFly([null,null,null,{"name":"email3","qid":"3","text":"E-Mail","type":"control_textbox"},null,{"name":"image","qid":"5","text":"6529_liner","type":"control_image"},{"name":"name","qid":"6","text":"Name","type":"control_textbox"},{"name":"message","qid":"7","text":"Message","type":"control_textarea"},{"name":"submit","qid":"8","text":"Submit","type":"control_button"},null,{"name":"contactUs","qid":"10","text":"Contact Us","type":"control_head"}]);
    setTimeout(function() {
-JotForm.paymentExtrasOnTheFly([null,null,null,{"name":"email3","qid":"3","text":"E-Mail","type":"control_textbox"},null,{"name":"image","qid":"5","text":"6529_liner","type":"control_image"},{"name":"name","qid":"6","text":"Name","type":"control_textbox"},{"name":"message","qid":"7","text":"Message","type":"control_textarea"},{"name":"submit","qid":"8","text":"Submit","type":"control_button"},null,{"name":"contactUs","qid":"10","text":"Contact Us","type":"control_head"}]);}, 20); 
+JotForm.paymentExtrasOnTheFly([null,null,null,{"name":"email3","qid":"3","text":"E-Mail","type":"control_textbox"},null,{"name":"image","qid":"5","text":"6529_liner","type":"control_image"},{"name":"name","qid":"6","text":"Name","type":"control_textbox"},{"name":"message","qid":"7","text":"Message","type":"control_textarea"},{"name":"submit","qid":"8","text":"Submit","type":"control_button"},null,{"name":"contactUs","qid":"10","text":"Contact Us","type":"control_head"}]);}, 20);
 </script>
 </head>
 
@@ -1288,7 +1285,7 @@ JotForm.paymentExtrasOnTheFly([null,null,null,{"name":"email3","qid":"3","text":
 		<div class="container">
       <h1>Hey! My name is Alex. </h1>
       <div class="navtoggle" id="myNavtoggle">
-      <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>	
+      <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
       <nav>
         <ol>
           <li><a href="index.html">home</a></li>
@@ -1322,9 +1319,6 @@ JotForm.paymentExtrasOnTheFly([null,null,null,{"name":"email3","qid":"3","text":
       </li>
       <li class="form-line" data-type="control_image" id="id_5">
         <div id="cid_5" class="form-input-wide">
-          <div style="text-align:center">
-            <img alt="" class="form-image" style="border:0" src="http://cms.interlogy.com/uploads/image_upload/image_upload/global/6529_liner.png" height="14px" width="215px" data-component="image" />
-          </div>
         </div>
       </li>
       <li class="form-line jf-required" data-type="control_textbox" id="id_6">
