--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       <div class="container">
       <h1>Hey! My name is Alex. </h1>
       <div class="navtoggle" id="myNavtoggle">
-      <div class="logo"><img src="images/logos_and_icons/Alex_logo.png" alt=""></div>
+      <div class="logo"><img src="images/logos_and_icons/pupmuii.png" alt=""></div>
       <nav>
         <ol>
           <li><a href="index.html">home</a></li>
@@ -141,7 +141,7 @@
 
 				  <div class="gallery-container w-3">
       <div class="gallery-item">
-        <div class="images"><img src="images/desktop/painting.png" alt="My Image">
+        <div class="images"><img src="images/desktop/painting.jpg" alt="My Image">
         </div>
         <div class="title">Photo13</div>
       </div>
